Fixed text overflow in css file

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@
 
 .s1 {
     padding: 20px 10%;
+    overflow: auto;
 }
 
 .s1 h2 {
